src/styles/messages/message.css
.sc-message {
    width: 300px;
    margin: 0px 15px;
    padding-bottom: 10px;
    display: flex;
}

.sc-message--content {
    width: 100%;
    display: flex;
    flex-direction: row;
}

.sc-message--content.sent {
    justify-content: flex-end;
}

.sc-message--content.sent .sc-message--avatar {
    display: none;
}

.sc-message--avatar {
    background-image: url(https://d13yacurqjgara.cloudfront.net/assets/avatar-default-aa2eab7684294781f93bc99ad394a0eb3249c5768c21390163c9f55ea8ef83a4.gif);
    background-repeat: no-repeat;
    background-size: 100%;
    background-position: center;
    min-width: 30px;
    min-height: 30px;
    border-radius: 50%;
    align-self: center;
    margin-right: 15px;
}

.sc-message--avatar.hidden {
    visibility: hidden;
}

.sc-message--content---body {
    width: 100%;
    display: flex;
    flex-direction: column;
}

.sc-message--username {
    font-size: 80%;
}

.sc-message--text {
    padding: 8px 12px;
    border-radius: 6px;
}

.sc-message--text h1,
h2,
h3,
h3,
p {
    margin: 2px;
    -webkit-font-smoothing: subpixel-antialiased;
}

.sc-message--text p {
    font-weight: 300;
    font-size: 14px;
}

.sc-message--text a {
    /* color: white; */
    font-weight: 300;
    font-size: 14px;
}

.sc-message--text a:link {
    color: white;
}

.sc-message--text a:visited {
    color: #fff04e;
}

.sc-message--text a:hover {
    color: white;
    text-decoration: none;
}

.sc-message--text a:active {
    color: white;
}

.sc-message--content.sent .sc-message--text {
    color: white;
    background-color: #4e8cff;
    max-width: calc(100% - 120px);
    word-wrap: break-word;
    align-self: flex-end;
}

.sc-message--content.sent .sc-message--emoji {
    align-self: flex-end;
}

.sc-message--content.received .sc-message--text {
    color: #263238;
    background-color: #f4f7f9;
    margin-right: 40px;
}

@media (max-width: 450px) {
    .sc-message {
        width: 80%;
    }
}

